# SmtpClient-for-Qt

./: .gitignore  CMakeLists.txt  SMTPClient.pro  SMTPEmail.pro  SmtpClient.pro
demos/demo1/: CMakeLists.txt
demos/demo2/: CMakeLists.txt
demos/demo3/: CMakeLists.txt
demos/demo4/: CMakeLists.txt
src/: emailaddress.h  mimemessage.cpp  mimemultipart.cpp  mimepart.cpp  mimetext.cpp  smtpclient.cpp  smtpclient.h
